# py-bangumi-api

./: .gitignore  .pre-commit-config.yaml  app.py  pyproject.toml  v0.yaml
.github/workflows/: build.yaml  ci.yaml  lint.yaml  release.yaml
bangumi_api/: client.py  error.py  model.py
tests/: client_test.py
