[tool.poetry]
name = "bangumi-api"
version = "0.1.0"
description = ""
authors = ["Trim21 <trim21.me@gmail.com>"]
readme = "readme.md"
packages = [{include = "bangumi_api"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pre-commit = {version = "3.3.3", python = "^3.9"}
datamodel-code-generator = "0.20.0"
pytest = "7.4.0"
coverage = "7.2.7"
flake8 = {version = "6.0.0", python = "^3.9"}
flake8-comprehensions = "==3.10.1"
flake8-bugbear = "==23.3.12"
flake8-pytest-style = "1.7.2"
flake8-pyproject = "1.2.2"
flake8-tidy-imports = "==4.8.0"
mypy = "1.4.1"

[tool.poetry-plugin-bump]
commit_msg = 'bump: v{version}'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
ignore = ['W503', 'B008', 'E203', 'E501']
exclude = ['.venv', '.git', '__pycache__', 'docs/source/conf.py', 'old', 'build', 'dist', 'tmp', 'api']
ban-relative-imports = 'parents'
